pagina inicial update 1.html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body onload="boasVindas()">
   <header>
-    <img src="https://via.placeholder.com/120" alt="Foto de Matheus" class="perfil" />
     <h1>Matheus Peres da Silva</h1>
     <p>Estudante de Negócios Digitais - FAE Centro Universitário</p>
   </header>
+  <img src="perfil.jpg" alt="Foto de perfil" class="perfil-img">
 
   <main>
     <section id="sobre">
@@ -33,9 +33,9 @@
 
     <section id="contato">
       <h2>Contato</h2>
-      <a href="mailto:matheus@example.com">E-mail</a> |
+      <a href="mailto:matheusperescurriculum@gmail.com">E-mail</a> |
       <a href="https://www.linkedin.com/in/matheus-peres-da-silva/" target="_blank">LinkedIn</a> |
-      <a href="https://github.com/" target="_blank">GitHub</a>
+      <a href="https://github.com/by-lelaEbirds" target="_blank">GitHub</a>
     </section>
 
     <button onclick="toggleTheme()">🌙 Alternar Tema</button>
