--- a/index.html
+++ b/index.html
@@ -1,44 +1,35 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Matheus Peres da Silva</title>
-  <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-</head>
-<body onload="boasVindas()">
-  <header>
-    <h1>Matheus Peres da Silva</h1>
-    <p>Estudante de Negócios Digitais - FAE Centro Universitário</p>
-  </header>
-  <img src="perfil.jpg" alt="Foto de perfil" class="perfil-img">
+<main>
+  <section id="sobre">
+    <h2>Sobre Mim</h2>
+    <p>Tenho 23 anos, sou estudante apaixonado por tecnologia, inovação e negócios digitais. Atualmente estudo Negócios Digitais na FAE Centro Universitário. Antes disso, cursei quatro anos de Negócios Internacionais, o que me deu uma base sólida em comércio global, estratégia e visão empresarial. O novo curso, no entanto, me trouxe mais entusiasmo por unir tecnologia e gestão.</p>
+  </section>
 
-  <main>
-    <section id="sobre">
-      <h2>Sobre Mim</h2>
-      <p>Tenho 23 anos, sou estudante apaixonado por tecnologia, inovação e negócios digitais. Atualmente estudo na FAE Centro Universitário e estou desenvolvendo minha carreira na área de tecnologia e desenvolvimento web.</p>
-    </section>
+  <section id="habilidades">
+    <h2>Habilidades</h2>
+    <ul>
+      <li>HTML5</li>
+      <li>CSS3</li>
+      <li>JavaScript</li>
+      <li>Git e GitHub</li>
+    </ul>
+  </section>
 
-    <section id="habilidades">
-      <h2>Habilidades</h2>
-      <ul>
-        <li>HTML5</li>
-        <li>CSS3</li>
-        <li>JavaScript</li>
-        <li>Git e GitHub</li>
-      </ul>
-    </section>
+  <section id="interesses">
+    <h2>Interesses Profissionais</h2>
+    <p>Tenho interesse em áreas como desenvolvimento front-end, transformação digital, produtos digitais, UX/UI, e soluções inovadoras que unam tecnologia e negócios. Também busco me aprofundar em marketing digital, análise de dados e empreendedorismo digital.</p>
+  </section>
 
-    <section id="contato">
-      <h2>Contato</h2>
-      <a href="mailto:matheusperescurriculum@gmail.com">E-mail</a> |
-      <a href="https://www.linkedin.com/in/matheus-peres-da-silva/" target="_blank">LinkedIn</a> |
-      <a href="https://github.com/by-lelaEbirds" target="_blank">GitHub</a>
-    </section>
+  <section id="evolucao">
+    <h2>Evolução Futura</h2>
+    <p>Em breve, este espaço será preenchido com projetos, ideias, artigos ou experiências profissionais que venham a enriquecer meu portfólio.</p>
+  </section>
 
-    <button onclick="toggleTheme()">🌙 Alternar Tema</button>
-  </main>
-</body>
-</html>
+  <section id="contato">
+    <h2>Contato</h2>
+    <a href="mailto:matheusperescurriculum@gmail.com">E-mail</a> |
+    <a href="https://www.linkedin.com/in/matheus-peres-da-silva/" target="_blank">LinkedIn</a> |
+    <a href="https://github.com/by-lelaEbirds" target="_blank">GitHub</a>
+  </section>
+
+  <button onclick="toggleTheme()">🌙 Alternar Tema</button>
+</main>
