--- a/index.html
+++ b/index.html
@@ -1,35 +1,59 @@
-<main>
-  <section id="sobre">
-    <h2>Sobre Mim</h2>
-    <p>Tenho 23 anos, sou estudante apaixonado por tecnologia, inovação e negócios digitais. Atualmente estudo Negócios Digitais na FAE Centro Universitário. Antes disso, cursei quatro anos de Negócios Internacionais, o que me deu uma base sólida em comércio global, estratégia e visão empresarial. O novo curso, no entanto, me trouxe mais entusiasmo por unir tecnologia e gestão.</p>
-  </section>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Página Pessoal de Matheus Peres da Silva</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body onload="boasVindas()">
 
-  <section id="habilidades">
-    <h2>Habilidades</h2>
-    <ul>
-      <li>HTML5</li>
-      <li>CSS3</li>
-      <li>JavaScript</li>
-      <li>Git e GitHub</li>
-    </ul>
-  </section>
+  <header>
+    <h1>Matheus Peres da Silva</h1>
+    <p>Estudante de Negócios Digitais</p>
+  </header>
 
-  <section id="interesses">
-    <h2>Interesses Profissionais</h2>
-    <p>Tenho interesse em áreas como desenvolvimento front-end, transformação digital, produtos digitais, UX/UI, e soluções inovadoras que unam tecnologia e negócios. Também busco me aprofundar em marketing digital, análise de dados e empreendedorismo digital.</p>
-  </section>
+  <main>
+    <img src="perfil.jpg" alt="Foto de perfil de Matheus Peres da Silva" class="perfil-img">
 
-  <section id="evolucao">
-    <h2>Evolução Futura</h2>
-    <p>Em breve, este espaço será preenchido com projetos, ideias, artigos ou experiências profissionais que venham a enriquecer meu portfólio.</p>
-  </section>
+    <section id="sobre">
+      <h2>Sobre Mim</h2>
+      <p>Tenho 23 anos, sou estudante apaixonado por tecnologia, inovação e negócios digitais. Atualmente estudo Negócios Digitais na FAE Centro Universitário. Antes disso, cursei quatro anos de Negócios Internacionais, o que me deu uma base sólida em comércio global, estratégia e visão empresarial. O novo curso, no entanto, me trouxe mais entusiasmo por unir tecnologia e gestão.</p>
+    </section>
 
-  <section id="contato">
-    <h2>Contato</h2>
-    <a href="mailto:matheusperescurriculum@gmail.com">E-mail</a> |
-    <a href="https://www.linkedin.com/in/matheus-peres-da-silva/" target="_blank">LinkedIn</a> |
-    <a href="https://github.com/by-lelaEbirds" target="_blank">GitHub</a>
-  </section>
+    <section id="habilidades">
+      <h2>Habilidades</h2>
+      <ul>
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>JavaScript</li>
+        <li>Git e GitHub</li>
+      </ul>
+    </section>
 
-  <button onclick="toggleTheme()">🌙 Alternar Tema</button>
-</main>
+    <section id="interesses">
+      <h2>Interesses Profissionais</h2>
+      <p>Tenho interesse em áreas como desenvolvimento front-end, transformação digital, produtos digitais, UX/UI, e soluções inovadoras que unam tecnologia e negócios. Também busco me aprofundar em marketing digital, análise de dados e empreendedorismo digital.</p>
+    </section>
+
+    <section id="evolucao">
+      <h2>Evolução Futura</h2>
+      <p>Em breve, este espaço será preenchido com projetos, ideias, artigos ou experiências profissionais que venham a enriquecer meu portfólio.</p>
+    </section>
+
+    <section id="contato">
+      <h2>Contato</h2>
+      <a href="mailto:matheusperescurriculum@gmail.com">E-mail</a> |
+      <a href="https://www.linkedin.com/in/matheus-peres-da-silva/" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/by-lelaEbirds" target="_blank">GitHub</a>
+    </section>
+
+    <button onclick="toggleTheme()">🌙 Alternar Tema</button>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
