--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body onload="boasVindas()">
-
   <header>
     <h1>Matheus Peres da Silva</h1>
     <p>Estudante de Negócios Digitais</p>
+    <img src="perfil.jpg" alt="Foto de perfil de Matheus Peres da Silva" class="perfil-img">
   </header>
 
   <main>
-    <img src="perfil.jpg" alt="Foto de perfil de Matheus Peres da Silva" class="perfil-img">
-
     <section id="sobre">
       <h2>Sobre Mim</h2>
       <p>Tenho 23 anos, sou estudante apaixonado por tecnologia, inovação e negócios digitais. Atualmente estudo Negócios Digitais na FAE Centro Universitário. Antes disso, cursei quatro anos de Negócios Internacionais, o que me deu uma base sólida em comércio global, estratégia e visão empresarial. O novo curso, no entanto, me trouxe mais entusiasmo por unir tecnologia e gestão.</p>
@@ -31,6 +29,8 @@
         <li>CSS3</li>
         <li>JavaScript</li>
         <li>Git e GitHub</li>
+        <li>Infraestrutura de TI (prática informal)</li>
+        <li>Montagem de servidores domésticos</li>
       </ul>
     </section>
 
@@ -51,7 +51,12 @@
       <a href="https://github.com/by-lelaEbirds" target="_blank">GitHub</a>
     </section>
 
-    <button onclick="toggleTheme()">🌙 Alternar Tema</button>
+    <section id="reflexao">
+      <h2>O que eu aprendi com essa missão?</h2>
+      <p>Aprendi a construir uma página pessoal estruturada, utilizando HTML semântico, CSS responsivo e JavaScript para interações simples. Desenvolver essa página me ajudou a entender como apresentar minha identidade digital de forma clara e funcional, além de fortalecer minhas habilidades em front-end.</p>
+    </section>
+
+    <button onclick="toggleTheme()" class="botao-tema">🌙 Alternar Tema</button>
   </main>
 
   <script src="script.js"></script>
