--- a/index.html
+++ b/index.html
@@ -62,3 +62,8 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+<div class="terminal">
+  matheus@localhost:~$ echo "Bem-vindo à minha página pessoal"
+  <span class="blinking-cursor">|</span>
+</div>
