--- a/index.html
+++ b/index.html
@@ -191,3 +191,8 @@
   </script>
 </body>
 </html>
+
+<div class="terminal">
+  matheus@localhost:~$ echo "Bem-vindo à minha página pessoal"
+  <span class="blinking-cursor">|</span>
+</div>
