--- a/index.html
+++ b/index.html
@@ -193,6 +193,6 @@
 </html>
 
 <div class="terminal">
-  matheus@localhost:~$ echo "Bem-vindo à minha página pessoal"
+  matheus@localhost:~$ echo "Bem-vindo ao meu universo digital"
   <span class="blinking-cursor">|</span>
 </div>
