--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Página Hacker de Matheus</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* Matrix Canvas */
+    /* estilão matrix kkjkj */
     #matrixCanvas {
       position: fixed;
       top: 0;
@@ -15,7 +15,7 @@
       background-color: black;
     }
 
-    /* Terminal Style */
+    /* aqui é o terminal */
     body {
       font-family: 'Courier New', monospace;
       background-color: black;
@@ -142,7 +142,7 @@
   </div>
 
   <script>
-    // Matrix Rain Effect
+    // chuva do matriquiz
     const canvas = document.getElementById('matrixCanvas');
     const ctx = canvas.getContext('2d');
 
@@ -180,7 +180,7 @@
       canvas.height = window.innerHeight;
     });
 
-    // Mensagem de boas-vindas
+    // Mensagem para quem abrir o site etc e tal
     function boasVindas() {
       alert("Bem-vindo(a) à página pessoal de Matheus Peres da Silva!");
     }
