--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Página Hacker de Matheus</title>
+  <title>Página Hacker (do bem, pô) de Matheus</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     /* estilão matrix kkjkj */
