--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </main>
 
   <div class="terminal">
-    matheus@localhost:~$ echo "Bem-vindo à minha página pessoal"
+    matheus@localhost:~$ echo "Bem-vindo ao meu universo digital"
     <span class="blinking-cursor">|</span>
   </div>
 
