--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
       <p>Aprendi a construir uma página pessoal estruturada, com HTML semântico, CSS e JavaScript. Essa página representa minha identidade digital de forma clara.</p>
     </section>
 
+    <!-- Botão de alternar tema com classe correta -->
     <button onclick="toggleTheme()" class="botao-tema">🌙 Alternar Tema</button>
   </main>
 
+  <!-- Terminal único, correto -->
   <div class="terminal">
     matheus@localhost:~$ echo "Bem-vindo ao meu universo digital"
     <span class="blinking-cursor">|</span>
@@ -191,8 +193,3 @@
   </script>
 </body>
 </html>
-
-<div class="terminal">
-  matheus@localhost:~$ echo "Bem-vindo ao meu universo digital"
-  <span class="blinking-cursor">|</span>
-</div>
