--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <header class="header-matrix">
                 <img src="perfil.jpg" alt="Foto de Perfil" class="profile-pic">
                 <div class="header-info">
-                    <h1 id="welcome-message"></h1>
-                    <p>Desenvolvedor Full Stack | Entusiasta de Cybersecurity</p>
-                </div>
+                    <p>Entusiasta de Cybersecurity</p> </div>
             </header>
+
+            <h1 id="welcome-message" class="main-welcome"></h1>
 
             <section id="sobre">
                 <h2>>&nbsp;./sobre_mim.sh</h2>
