--- a/index.html
+++ b/index.html
@@ -42,15 +42,33 @@
             <header class="header-matrix">
                 <img src="perfil.jpg" alt="Foto de Perfil" class="profile-pic">
                 <div class="header-info">
-                    <p>Entusiasta de Cybersecurity</p> </div>
+                    <p>Entusiasta de Cybersecurity</p>
+                </div>
             </header>
 
-            <h1 id="welcome-message" class="main-welcome"></h1>
+            <h1 id="welcome-message" class="main-welcome">> Bem-vindo<span class="blinking-cursor">_</span></h1>
 
             <section id="sobre">
                 <h2>>&nbsp;./sobre_mim.sh</h2>
                 <p>Olá! Sou um estudante de programação apaixonado por resolver problemas. Meu foco é aprender e aplicar tecnologias modernas para criar soluções eficientes e seguras...</p>
-                </section>
+                
+                <pre class="ascii-art">
+            _______________
+           /               \
+          /                 \
+         /                   \
+        |   XXXXXX   XXXXXX   |
+        |   XXXXXX   XXXXXX   |
+        |   XXXX     XXXX     |
+        |         X         |
+        |        XXX        |
+        |        XXX        |
+        |   XXXXXXXXXXXXX   |
+        |   XXXXXXXXXXXXX   |
+         \                 /
+          \_______________/
+                </pre>
+            </section>
 
             <section id="projetos">
                 <h2>>&nbsp;./meus_projetos/</h2>
